unpackaged/main/default/objects/Account/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <description>The discounted product rate for this customer</description>
    <label>DiscountRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>