unpackaged/main/default/objects/Account/fields/Platinum_user__c.field-meta.xml
<CustomField>
    <fullName>Platinum_user__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this customer have our platinum level of support?</description>
    <label>Platinum user</label>
    <type>Checkbox</type>
</CustomField>